<resources>
    <string name="app_name">Sign</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="xh">学号/工号</string>
    <string name="password">密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>

    <!--Navigation item name-->
    <string name="nav_person">个人中心</string>
    <string name="nav_sign">点名</string>
    <string name="nav_work">作业</string>
    <string name="nav_setting">设置</string>
    <string name="nav_message">信息</string>
    <string name="nav_school">经济管理学院</string>
    <string name="nav_wSpace">http://www.krisez.cn</string>
    <string name="nav_email">Email:</string>
    <string name="nav_emailAd">krisez96@gmail.com</string>
    <string name="nav_share">分享</string>
    <string name="main_tips">请登录查看您的课表！\n请通过个人中心登录</string>
    <string name="action_refresh">刷新</string>
    <string name="name">姓名</string>
    <string name="xy">学院</string>
    <string name="zy">专业</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="register_tip">每个都为必填项，谢谢合作！ \n填写前请查看《注册须知》</string>
    <string name="create_join">创建/加入</string>
    <string name="course_name">课程名</string>
    <string name="teacher_name">教师</string>
    <string name="class_name">班级</string>
    <string name="ensure">确定</string>
    <string name="search">搜索</string>
    <string name="sign_state">状态</string>
    <string name="start">开始</string>
    <string name="click_me_show_stu">点我查看签到详情</string>
    <string name="input_bh">输入编号</string>
    <string name="input_yzm">输入验证码</string>
    <string name="seat_tips">貌似还没座位~</string>

</resources>
