<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/nav_person" />
        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_menu_sign"
            android:title="@string/nav_sign"/>
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_menu_other"
            android:title="@string/nav_work" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_setting" />
    </group>

    <item android:title="@string/nav_message">
        <menu>
            <item
                android:title="@string/nav_school" />
            <item
                android:title="@string/nav_wSpace" />
            <item
                android:title="@string/nav_email"/>
            <item
                android:title="@string/nav_emailAd"/>
        </menu>
    </item>

</menu>
