<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/course_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sign_create_course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teacher_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_create_teacher_name"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/class_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sign_create_class_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <Button
        android:layout_margin="8dp"
        android:id="@+id/sign_create_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ensure" />


</LinearLayout>